# musictabapp_codex

./: __peek_comments.py  api.md  spec.md  todolist.md
backend/: .env  .env.example  AGENTS.md  alembic.ini  pyproject.toml
backend/alembic/: README.md  env.py
backend/alembic/versions/: 20250919_0001_initial_schema.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: health.py  jobs.py  uploads.py
backend/app/core/: celery_app.py  config.py  database.py  security.py  supabase.py
backend/app/models/: __init__.py  tables.py
backend/app/repositories/: jobs.py
backend/app/schemas/: asset.py  event.py  job.py  upload.py
backend/app/services/: job_service.py  storage_service.py
backend/app/tasks/: __init__.py  ingest.py  logging.py  orchestrator.py  process.py  publish.py  utils.py
backend/tests/: test_celery.py  test_health.py  test_jobs.py  test_models.py  test_security.py  test_uploads.py
frontend/: .gitignore  AGENTS.md  README.md  analysis_options.yaml  pubspec.yaml
frontend/lib/: app.dart  main.dart
frontend/lib/core/: app_config.dart  providers.dart  theme.dart
frontend/lib/features/home/: home_shell.dart  job_list_page.dart
frontend/lib/features/splash/: splash_page.dart
frontend/lib/routes/: app_router.dart
frontend/test/: widget_test.dart
