[tool.poetry]
name = "musictabapp-backend"
version = "0.1.0"
description = "Backend service for the music transcription platform."
authors = ["MusicTab Team <dev@musictabapp.local>"]
packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
sqlmodel = "^0.0.22"
pydantic = "^2.7.1"
pydantic-settings = "^2.1.0"
celery = "^5.4.0"
redis = "^5.0.4"
httpx = "^0.27.0"
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
supabase = "^2.4.0"
python-dotenv = "^1.0.1"
loguru = "^0.7.2"
psycopg = { extras = ["binary"], version = "^3.2.1" }

[tool.poetry.group.dev.dependencies]
alembic = "^1.13.1"
pytest = "^8.3.0"
pytest-asyncio = "^0.23.8"
pytest-cov = "^5.0.0"
ruff = "^0.5.0"

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
